modules/gdscript/tests/scripts/analyzer/errors/vararg_typed_array_rest.gd
# Currently not supported.
func f(...args: Array[int]):
	pass

func test():
	pass
